<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/recipes"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/recipes"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/book_mark"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>
