<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.Authentication">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_21sdp"
        android:text="@string/subheading_authentication"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:text="@string/heading_authentication"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cookinganimation"
        app:lottie_repeatMode="reverse" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_signupButton"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/button_background"
        android:text="@string/google_button"
        android:textColor="@color/black"
        android:drawableStart="@drawable/google"
        android:paddingStart="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:gravity="center"
        android:text="Or\nContinue By"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/google_signupButton"
        app:layout_constraintStart_toStartOf="@+id/google_signupButton"
        app:layout_constraintTop_toBottomOf="@+id/google_signupButton" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="@dimen/_227sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_56sdp"
        android:background="@drawable/create_button"
        android:text="@string/create_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/auth_info"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_35sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

    <TextView
        android:id="@+id/Signup_text"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_38sdp"
        android:text="Sign Up"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/lightgreen"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>